# visit-all-the-stops

./: .gitmodules  CMakeLists.txt  PLANS.md  README.md  config_bart_100percent.toml  config_bart_anypercent.toml  config_bart_lots.toml  config_bart_regional.toml  config_vta_lr_100percent.toml  config_vta_lr_anypercent.toml  config_vta_lr_regional.toml  default.nix
data/: bart_viz.json
data/fetched-2024-06-08/bart/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  shapes.txt  transfers.txt  trips.txt
data/fetched-2024-06-08/caltrain/: agency.txt  calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  fare_attributes.txt  fare_rider_categories.txt  fare_rules.txt  farezone_attributes.txt  feed_info.txt  rider_categories.txt  route_attributes.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
data/testdata/: expected_bart_tables.txt  expected_caltrain_tables.txt
src/: Config.cpp  Config.h  MultiSegment.cpp  MultiSegment.h  MultiSegment_test.cpp  Problem.cpp  Problem.h  Problem_test.cpp  Simplifier.cpp  Simplifier.h  Solver.cpp  Solver.h  Solver2.cpp  Solver2.h  Solver2_test.cpp  WalkFinder.cpp  WalkFinder.h  WalkFinder_test.cpp  World.cpp  World.h  World_test.cpp  dump_problem_graph.cpp  list_stops.cpp  main.cpp  main_test.cpp
visit-all-the-stops-visualization/: package-lock.json  package.json
visit-all-the-stops-visualization/src/app/: page.tsx
